--- a/index.html
+++ b/index.html
@@ -36,12 +36,9 @@
                     <h2>About Me</h2>
                 </aside>
                 <div class="cardContent">
-                    <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec quis ante eu massa pellentesque euismod ut eu ante. Nulla in est quis mi varius accumsan quis vitae purus. Quisque urna diam, mattis vitae risus in, scelerisque facilisis lorem. Aliquam ligula libero, finibus id libero ut, tempor scelerisque dolor. Nam turpis urna, iaculis et posuere vel, dapibus non tortor. Mauris mattis fringilla porttitor. In hac habitasse platea dictumst. Nam sed semper justo. Nunc finibus efficitur odio, vel molestie arcu tincidunt vitae. Suspendisse potenti. Integer nec velit id risus pharetra rhoncus vel non enim. Ut non elit ut odio vestibulum fringilla. Phasellus convallis velit eu lectus rhoncus pretium.</p> -->
                     <p style="text-indent: 1em"> I'm an artist and developer from the Pacific Northwest. I'm currently residing in South King County, in the greater Seattle area, but I've lived in various locations around the Puget Sound in Washington State and Oregon's Willamette Valley. I recieved a Bachelor of Science degree in Audio & Media Design Technology from the Art Institute of Seattle in 2018.
                         <br><br>
-                        &nbsp;&nbsp;&nbsp;&nbsp;My goal as a budding developer is to eventually combine my audio knowledge with my coding skills in order to create music- and audio-centered applications, plug-ins for Digital Audio Workstations, and program audio and music for video games both on consoles and mobile phones.
-                        <br><br>
-                        &nbsp;&nbsp;&nbsp;&nbsp;When I'm not coding, I like writing raps and creating hip-hop music. When I'm not being creative I listen to hip-hop and metal music, watch horror movies, and play RPGs.
+                        &nbsp;&nbsp;&nbsp;&nbsp;One of my goals as a developer is to combine my audio knowledge with my coding skills in order to create music- and audio-centered applications, plug-ins for Digital Audio Workstations, and program audio and music for video games both on consoles and mobile phones.
                     </p>
                 </div>
             </section>
@@ -53,12 +50,27 @@
                 <aside class="sideTitle">
                     <h2>My Work</h2>
                 </aside>
-                <div class="cardContent">
-                    <a href="https://github.com/Chrisaeus" id="linkGitHub" title="My GitHub Page"></a>
-                    <a href="#null" title="Coming Soon" class="comingSoon"></a>
-                    <a href="#null" title="Coming Soon" class="comingSoon"></a>
-                    <a href="#null" title="Coming Soon" class="comingSoon"></a>
-                    <a href="#null" title="Coming Soon" class="comingSoon"></a>
+                <div id="workList" class="cardContent">
+                    <a href="https://allout004.github.io/GroupProject1/" id="interActor" class="card" title="My GitHub Page">
+                        <object class="gitHub"><a href="https://github.com/Allout004/GroupProject1">Repo</a></object>
+                        <span class="cardTitle">InterActor</span>
+                    </a>
+                    <a href="#null" title="Coming Soon" class="comingSoon card">
+                        <object class="gitHub"><a href="">Repo</a></object>
+                        <span class="cardTitle">README Generator</span>
+                    </a>
+                    <a href="#null" title="Coming Soon" class="comingSoon card">
+                        <object class="gitHub"><a href="">Repo</a></object>
+                        <span class="cardTitle">InterActor</span>
+                    </a>
+                    <a href="#null" title="Coming Soon" class="comingSoon card">
+                        <object class="gitHub"><a href="">Repo</a></object>
+                        <span class="cardTitle">InterActor</span>
+                    </a>
+                    <a href="#null" title="Coming Soon" class="comingSoon card">
+                        <object class="gitHub"><a href="">Repo</a></object>
+                        <span class="cardTitle">InterActor</span>
+                    </a>
                 </div>
             </section>
             <br>
@@ -72,11 +84,14 @@
                 <div class="cardContent">
                     <h3><a href="mailto:christian.sadler@yahoo.com">christian.sadler@yahoo.com</a></h3>
                     <h3>206.271.9945</h3>
+                    <h3><a href="https://github.com/Chrisaeus">GitHub</a></h3>
+                    <h3><a href="https://www.linkedin.com/in/christian-sadler-436a3110b/">LinkedIn</a></h3>
                 </div>
             </section>
         </main>
         <footer>
             <p id="footer">&copy; Christian Sadler 2021</p>
         </footer>
+        <!-- <script src="./assets/js/script.js"></script> -->
     </body>
 </html>
