Added links for all repos and deployed projects

--- a/index.html
+++ b/index.html
@@ -56,20 +56,20 @@
                         <span class="cardTitle">InterActor</span>
                     </a>
                     <a href="#null" title="Coming Soon" class="comingSoon card">
-                        <object class="gitHub"><a href="">Repo</a></object>
+                        <object class="gitHub"><a href="https://github.com/Chrisaeus/README-Generator">Repo</a></object>
                         <span class="cardTitle">README Generator</span>
                     </a>
                     <a href="#null" title="Coming Soon" class="comingSoon card">
-                        <object class="gitHub"><a href="">Repo</a></object>
-                        <span class="cardTitle">InterActor</span>
+                        <object class="gitHub"><a href="https://github.com/Chrisaeus/E-Commerce-Back-End">Repo</a></object>
+                        <span class="cardTitle">E-Commerce Back End</span>
                     </a>
-                    <a href="#null" title="Coming Soon" class="comingSoon card">
-                        <object class="gitHub"><a href="">Repo</a></object>
-                        <span class="cardTitle">InterActor</span>
+                    <a href="https://powerful-bastion-50177.herokuapp.com/" title="Coming Soon" class="comingSoon card">
+                        <object class="gitHub"><a href="https://github.com/Chrisaeus/Note-Taker">Repo</a></object>
+                        <span class="cardTitle">Note Taker</span>
                     </a>
-                    <a href="#null" title="Coming Soon" class="comingSoon card">
-                        <object class="gitHub"><a href="">Repo</a></object>
-                        <span class="cardTitle">InterActor</span>
+                    <a href="https://chrisaeus.github.io/Weather-Dashboard/" title="Coming Soon" class="comingSoon card">
+                        <object class="gitHub"><a href="https://github.com/Chrisaeus/Weather-Dashboard">Repo</a></object>
+                        <span class="cardTitle">Weather Dashboard</span>
                     </a>
                 </div>
             </section>
