added screenshots for cards and github icon for github links

--- a/index.html
+++ b/index.html
@@ -52,23 +52,23 @@
                 </aside>
                 <div id="workList" class="cardContent">
                     <a href="https://allout004.github.io/GroupProject1/" id="interActor" class="card" title="My GitHub Page">
-                        <object class="gitHub"><a href="https://github.com/Allout004/GroupProject1">Repo</a></object>
+                        <object class="gitHub"><a href="https://github.com/Allout004/GroupProject1"></a></object>
                         <span class="cardTitle">InterActor</span>
                     </a>
-                    <a href="#null" title="Coming Soon" class="comingSoon card">
-                        <object class="gitHub"><a href="https://github.com/Chrisaeus/README-Generator">Repo</a></object>
+                    <a href="#null" title="README Generator" id="readmeGenerator" class="card">
+                        <object class="gitHub"><a href="https://github.com/Chrisaeus/README-Generator"></a></object>
                         <span class="cardTitle">README Generator</span>
                     </a>
-                    <a href="#null" title="Coming Soon" class="comingSoon card">
-                        <object class="gitHub"><a href="https://github.com/Chrisaeus/E-Commerce-Back-End">Repo</a></object>
+                    <a href="#null" title="E-Commerce Back End" id="eCommerceBackEnd" class="card">
+                        <object class="gitHub"><a href="https://github.com/Chrisaeus/E-Commerce-Back-End"></a></object>
                         <span class="cardTitle">E-Commerce Back End</span>
                     </a>
-                    <a href="https://powerful-bastion-50177.herokuapp.com/" title="Coming Soon" class="comingSoon card">
-                        <object class="gitHub"><a href="https://github.com/Chrisaeus/Note-Taker">Repo</a></object>
+                    <a href="https://powerful-bastion-50177.herokuapp.com/" id="noteTaker" title="Note Taker" class="card">
+                        <object class="gitHub"><a href="https://github.com/Chrisaeus/Note-Taker"></a></object>
                         <span class="cardTitle">Note Taker</span>
                     </a>
-                    <a href="https://chrisaeus.github.io/Weather-Dashboard/" title="Coming Soon" class="comingSoon card">
-                        <object class="gitHub"><a href="https://github.com/Chrisaeus/Weather-Dashboard">Repo</a></object>
+                    <a href="https://chrisaeus.github.io/Weather-Dashboard/" id="weatherDashboard" title="Weather Dashboard" class="card">
+                        <object class="gitHub"><a href="https://github.com/Chrisaeus/Weather-Dashboard"></a></object>
                         <span class="cardTitle">Weather Dashboard</span>
                     </a>
                 </div>
