fixed hover title for InterActor card

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <h2>My Work</h2>
                 </aside>
                 <div id="workList" class="cardContent">
-                    <a href="https://allout004.github.io/GroupProject1/" id="interActor" class="card" title="My GitHub Page">
+                    <a href="https://allout004.github.io/GroupProject1/" id="interActor" class="card" title="InterActor">
                         <object class="gitHub"><a href="https://github.com/Allout004/GroupProject1"></a></object>
                         <span class="cardTitle">InterActor</span>
                     </a>
