Added resume and download link to resume

--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
                     <h3>206.271.9945</h3>
                     <h3><a href="https://github.com/Chrisaeus">GitHub</a></h3>
                     <h3><a href="https://www.linkedin.com/in/christian-sadler-436a3110b/">LinkedIn</a></h3>
+                    <h3><a href="./assets/documents/ChristianSadlerResume.pdf" download>Resume</a></h3>
                 </div>
             </section>
         </main>
